# annotrack

./: .gitignore  README.md  environment.yml  setup.cfg  setup.py
.github/workflows/: test-and-deploy.yml  test.yml
annotrack/: analyse.py  annotation.py  misc.py  sample_from_meta.py  sample_management.py  sampling.py
scripts/: analyse_annotated.py  annotate_samples.py  annotate_samples_exvivo.py  annotate_samples_invivo.py  debug-sample.py  plot_errors.py  sample_tracks.py
src/annotrack/: __init__.py  _dock_widgets.py  annotation.py  napari.yaml  sample_from_meta.py  sample_management.py  sampling.py
src/annotrack/_tests/: test_sampling.py
