[metadata]
name = annotrack
version = 0.0.1
author = Abigail S McGovern 
author_email = abigail_mcgovern@hotmail.com
url = https://github.com/abigailmcgovern/annotrack
license = BSD-3-Clause
description = napari plugin for annotating tracks to estimate error rates
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Framework :: napari
project_urls = 
	Bug Tracker = https://github.com/abigailmcgovern/annotrack/issues
	Documentation = https://github.com/abigailmcgovern/annotrack#README.md
	Source Code = https://github.com/abigailmcgovern/annotrack
	User Support = https://github.com/abigailmcgovern/annotrack/issues

[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
# add your package requirements here
install_requires = 
	dask
    napari
    numpy
    zarr
    nd2_dask
    pytest
    sphinx
    pandas
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	annotrack = annotrack:napari.yaml

[options.package_data]
annotrack = napari.yaml